# apipe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  publish.yaml
apipe/: __init__.py  _cached.py  _dask.py
tests/: test_hash.py  test_pipeline.py
