[tool.poetry]
name = "apipe"
version = "0.0.0"
description = "Data pipelines with lazy computation and caching"
authors = ["Mysterious Ben <datascience@tuta.io>"]
keywords = ["python", "pipeline", "dask", "pandas"]
readme = "README.md"
license = "Apache License, Version 2.0"
homepage = "https://github.com/mysterious-ben/apipe"
repository = "https://github.com/mysterious-ben/apipe"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
dask = {extras = ["delayed"], version = "^2021.12.0"}
numpy = "^1.21.4"
pandas = "^1.3.5"
pyarrow = "^6.0.1"
xxhash = "^2.0.2"
cloudpickle = "^2.0.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
flake8 = "^4.0.1"
black = "^21.10b0"
mypy = "^0.910"
pre-commit = "^2.15.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 99
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \notebooks
    | .ipynb_checkpoints
    | __pycache__
    | data
    | logs
    | _build
    | buck-out
    | build
    | dist
    | snapshots
    | \.venv
  )/
)
'''

[tool.pytest.ini_options]
markers = [
    "integration: integration testing (tests require valid credentials and can be slow)",
]
testpaths = [
    "tests",
]
